styles/sources.css
@keyframes source-target-highlight {
    0%   { border-color: #00ffff; background-color: #0060ff }
    100% {  }
}

header::before {
    background-image: url("../images/headers/library.jpg");
}

section h2 a {
    text-decoration: none;
}

blockquote {
    font-size: 1.3rem;
}

#enable-javascript {
    text-align: center;
}

#source-list {
    margin-bottom: 4rem;
}

/* Searchbar */

#search {
    display: flex;
    justify-content: center;
    margin-bottom: 1rem;
}

#search input {
    font-size: 1.2rem;
    border-radius: 4px;
    border: none;
    background-color: transparent;
    padding: .3rem .6rem;
}

#search button {
    font-size: 1.2rem;
    border: none;
    background-color: transparent;
    cursor: pointer;
    fill: #444;
}

#search button .search-icon {
    display: inline;
    margin-top: .12rem;
    margin-bottom: -.4rem;
    height: 1.6rem;
}

#search button:hover {
    fill: #007060;
}

#search .search-bg {
    border-radius: 4px;
    padding: 1px;
    background-color: #dfe1e5;
    transition: background .14s;
}

#search .search-bg:focus-within {
    background-color: #385e62;
    border-color: #007060;
}

#search .search-bg:focus-within input {
    color: #edffe3;
}

#search .search-bg:focus-within svg {
    fill: #edffe3;
}

/* Hiding the element visually, but allow it to be read by screen-redaers */

.visually-hidden {
    border: 0;
    clip: rect(0 0 0 0);
    height: 1px;
    margin: -1px;
    overflow: hidden;
    padding: 0;
    position: absolute !important;
    width: 1px;
}

/* Source section */

.source {
    padding: 3rem 15%;
}

.source.hidden {
    display: none;
}

.source:nth-child(odd) {
    background-color: #f7f9fe;
}

.source:target {
    border-top: 4px solid #a0f0da;
    border-bottom: 4px solid #a0f0da;
    animation: 1.3s source-target-highlight;
    background-color: #a0f0da44;
    padding-top: 5rem;
    padding-bottom: 5rem;
}

.source blockquote {
    display: flex;
    align-items: flex-start;
    margin-left: 0;
    padding-left: 0;
    margin-right: 0;
}

.source blockquote::before {
    content: '';
    display: inline-block;
    background-image: url('../images/quote.svg');
    width: 3rem;
    height: 3rem;
    flex-shrink: 0;
    margin-top: -9px;
    opacity: .1;
    margin-right: .4rem;
}

.source .tag {
    float: right;
    font-weight: 400;
    background-color: #f4e3c0;
    border-radius: 4px;
    padding: 0 6px;
}

.source .key-value .key {
    font-weight: bold;
}

@media(max-width: 1030px) {
    .source .tag {
        width: 100%;
        margin: .7rem 0;
        font-size: 1.2rem;
        text-align: center;
    }
}

